--- a/app/works/contents/vietnam-covid-tracker.mdx
+++ b/app/works/contents/vietnam-covid-tracker.mdx
@@ -11,8 +11,23 @@ github: 'https://github.com/viet34tqc/vietnam-covid-tracker'
 
 TailwindCSS is one of best CSS framework and rapidly become more popular amond developers. For this reason, I decided to give it a try and build a website with Tailwind CSS and React Query. The API is get from [https://zingnews.vn/](https://zingnews.vn/) and [https://vnexpress.net/](https://vnexpress.net/)
 
-<Image src="https://i.imgur.com/C3xIbs3.png" width="1280" height="750" />
+<Image
+  src="https://i.imgur.com/C3xIbs3.png"
+  width="1280"
+  height="750"
+  alt="Demo image for Covid Tracker project"
+/>
 
-<Image src="https://i.imgur.com/qUsvMIt.png" width="1280" height="750" />
+<Image
+  src="https://i.imgur.com/qUsvMIt.png"
+  width="1280"
+  height="750"
+  alt="Demo image for Covid Tracker project"
+/>
 
-<Image src="https://i.imgur.com/NOUZipj.png" width="1280" height="750" />
+<Image
+  src="https://i.imgur.com/NOUZipj.png"
+  width="1280"
+  height="750"
+  alt="Demo image for Covid Tracker project"
+/>
