--- a/app/works/contents/vietnam-covid-tracker.mdx
+++ b/app/works/contents/vietnam-covid-tracker.mdx
@@ -7,6 +7,7 @@ tech: 'React, React Query, Framer Motion, TailwindCSS'
 thumb: 'vietnam-covid-tracker/thumb.jpg'
 demo: 'https://nv-vietnam-covid-tracker.vercel.app/'
 github: 'https://github.com/viet34tqc/vietnam-covid-tracker'
+order: 3
 ---
 
 TailwindCSS is one of best CSS framework and rapidly become more popular amond developers. For this reason, I decided to give it a try and build a website with Tailwind CSS and React Query. The API is get from [https://zingnews.vn/](https://zingnews.vn/) and [https://vnexpress.net/](https://vnexpress.net/)
